<?xml version="1.0"?>
<package format="2">
  <name>mean_distances</name>
  <version>0.0.0</version>
  <description>The mean_distances package allows getting distances from several areas of point cloud</description>
  <maintainer email="79922187361@yandex.ru">Zakhar Anikin</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <export>
  </export>
</package>
